# spotimoo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  tests.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  modules.doctree  spotimoo.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  spotimoo.html
docs/_build/html/.doctrees/: api.doctree  environment.pickle
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/spotimoo/: exceptions.html  spotimoo.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  modules.rst.txt  spotimoo.rst.txt
spotimoo/: __init__.py  exceptions.py  spotimoo.py
tests/: conftest.py  spotimoo_test.py
